refactor main page & get-started content source

--- a/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
@@ -14,5 +14,5 @@
 {{ with (.Site.GetPage "testimonial") }}{{ partial "testimonial" . }}{{ end }}
 {{ with (.Site.GetPage "enterprise-benefits") }}{{ partial "enterprise-benefits" . }}{{ end }}
 {{ with (.Site.GetPage "get-contacted") }}{{ partial "get-contacted" . }}{{ end }}
-{{ with (.Site.GetPage "get-started") }}{{ partial "get-started" . }}{{ end }}
+{{ partial "get-started" . }}
 {{ with (.Site.GetPage "footer") }}{{ partial "footer" . }}{{ end }}
