--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
@@ -1,3 +1,4 @@
+{{ with (.Site.GetPage "core-features") }}
 <section class="core-features">
   <div class="container">
     <h2 class="core-features__title mx-auto">{{ .Params.title }}</h2>
@@ -35,3 +36,4 @@
     </div>
   </div>
 </section>
+{{ end }}
