--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
@@ -1,3 +1,4 @@
+{{ with (.Site.GetPage "customer-stories") }}
 <section class="customer-stories">
   <div class="container">
     <div class="customer-stories__header">
@@ -38,3 +39,4 @@
     </div>
   </div>
 </section>
+{{ end }}
