--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
@@ -1,3 +1,4 @@
+{{ with (.Site.GetPage "docker-deploy") }}
 <section class="docker-deploy">
   <div class="container">
     <div class="docker-deploy__content row">
@@ -27,3 +28,4 @@
     </div>
   </div>
 </section>
+{{ end }}
