--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started.html
@@ -1,3 +1,4 @@
+{{ with (.Site.GetPage "get-started") }}
 <section class="get-started">
   <div class="container">
     <div class="get-started__content">
@@ -12,3 +13,4 @@
     </div>
   </div>
 </section>
+{{ end }}
