--- a/qdrant-landing/themes/qdrant-2024/layouts/use-cases/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/use-cases/baseof.html
@@ -12,5 +12,6 @@
 {{ with (.Site.GetPage "vectors-use-case") }}
   {{ .Scratch.Set "cssClass" "vectors-use-case" }}{{ partial "vectors" . }}
 {{ end }}
-{{ with (.Site.GetPage "get-started") }}{{ partial "get-started" . }}{{ end }}
+
+{{ partial "get-started" . }}
 {{ with (.Site.GetPage "footer") }}{{ partial "footer" . }}{{ end }}
