--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
@@ -15,5 +15,5 @@
 {{ with (.Site.GetPage "feature-overview") }}{{ partial "feature-overview" . }}{{ end }}
 {{ with (.Site.GetPage "get-started-small") }}{{ partial "get-started-small" . }}{{ end }}
 {{ with (.Site.GetPage "additional-resources") }}{{ partial "additional-resources" . }}{{ end }}
-{{ with (.Site.GetPage "get-started") }}{{ partial "get-started" . }}{{ end }}
+{{ partial "get-started" . }}
 {{ with (.Site.GetPage "footer") }}{{ partial "footer" . }}{{ end }}
