refactor footer content source

--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
@@ -16,4 +16,4 @@
 {{ with (.Site.GetPage "get-started-small") }}{{ partial "get-started-small" . }}{{ end }}
 {{ with (.Site.GetPage "additional-resources") }}{{ partial "additional-resources" . }}{{ end }}
 {{ partial "get-started" . }}
-{{ with (.Site.GetPage "footer") }}{{ partial "footer" . }}{{ end }}
+{{ partial "footer" . }}
