--- a/qdrant-landing/themes/qdrant-2024/layouts/use-cases/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/use-cases/baseof.html
@@ -14,4 +14,4 @@
 {{ end }}
 
 {{ partial "get-started" . }}
-{{ with (.Site.GetPage "footer") }}{{ partial "footer" . }}{{ end }}
+{{ partial "footer" . }}
