--- a/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
@@ -15,4 +15,4 @@
 {{ with (.Site.GetPage "enterprise-benefits") }}{{ partial "enterprise-benefits" . }}{{ end }}
 {{ with (.Site.GetPage "get-contacted") }}{{ partial "get-contacted" . }}{{ end }}
 {{ partial "get-started" . }}
-{{ with (.Site.GetPage "footer") }}{{ partial "footer" . }}{{ end }}
+{{ partial "footer" . }}
