--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
@@ -1,3 +1,4 @@
+{{ with (.Site.GetPage "footer") }}
 <footer class="footer">
   <div class="container">
     <div class="footer__top">
@@ -72,3 +73,4 @@
     </div>
   </div>
 </footer>
+{{ end }}
