--- a/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
@@ -10,9 +10,9 @@
   </header>
 </main>
 
-{{ with (.Site.GetPage "enterprise-solutions-use-cases") }}{{ partial "enterprise-solutions-use-cases" . }}{{ end }}
-{{ with (.Site.GetPage "testimonial") }}{{ partial "testimonial" . }}{{ end }}
-{{ with (.Site.GetPage "enterprise-benefits") }}{{ partial "enterprise-benefits" . }}{{ end }}
-{{ with (.Site.GetPage "get-contacted") }}{{ partial "get-contacted" . }}{{ end }}
+{{ partial "enterprise-solutions-use-cases" . }}
+{{ partial "testimonial" . }}
+{{ partial "enterprise-benefits" . }}
+{{ partial "get-contacted" . }}
 {{ partial "get-started" . }}
 {{ partial "footer" . }}
