refactor qdrant-vector-database content source

--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/feature-overview.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/feature-overview.html
@@ -1,3 +1,4 @@
+{{ with (.Site.GetPage "feature-overview") }}
 <section class="feature-overview">
   <div class="feature-overview__content container">
     <div class="row">
@@ -30,3 +31,4 @@
     </div>
   </div>
 </section>
+{{ end }}
