--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-use-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-use-cases.html
@@ -1,3 +1,4 @@
+{{ with (.Site.GetPage "qdrant-vector-database-use-cases") }}
 <section class="qdrant-vector-database-use-cases">
   <div class="qdrant-vector-database-use-cases__wrapper container">
     <div class="qdrant-vector-database-use-cases__cases row">
@@ -18,3 +19,4 @@
     </div>
   </div>
 </section>
+{{ end }}
