--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
@@ -1,3 +1,4 @@
+{{ with (.Site.GetPage "additional-resources") }}
 <section class="additional-resources">
   <div class="additional-resources__wrapper container">
     <h2 class="additional-resources__title">{{ .Params.title }}</h2>
@@ -21,3 +22,4 @@
   </div>
   {{ partial "top-and-bottom-overlay" (dict "context" . "class" "additional-resources") }}
 </section>
+{{ end }}
