--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/baseof.html
@@ -7,13 +7,12 @@
     {{ partial "menu" . }}
     {{ partial "menu-mobile" . }}
     {{ partial "qdrant-vector-database-hero" . }}
-    {{ end }}
   </header>
 </main>
 
-{{ with (.Site.GetPage "qdrant-vector-database-use-cases") }}{{ partial "qdrant-vector-database-use-cases" . }}{{ end }}
-{{ with (.Site.GetPage "feature-overview") }}{{ partial "feature-overview" . }}{{ end }}
-{{ with (.Site.GetPage "get-started-small") }}{{ partial "get-started-small" . }}{{ end }}
-{{ with (.Site.GetPage "additional-resources") }}{{ partial "additional-resources" . }}{{ end }}
+{{ partial "qdrant-vector-database-use-cases" . }}
+{{ partial "feature-overview" . }}
+{{ partial "get-started-small" . }}
+{{ partial "additional-resources" . }}
 {{ partial "get-started" . }}
 {{ partial "footer" . }}
