--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "additional-resources") }}
+{{ with (.Site.GetPage "/qdrant-vector-database/additional-resources") }}
 <section class="additional-resources">
   <div class="additional-resources__wrapper container">
     <h2 class="additional-resources__title">{{ .Params.title }}</h2>
