--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "core-features") }}
+{{ with (.Site.GetPage "/headless/main/core-features") }}
 <section class="core-features">
   <div class="container">
     <h2 class="core-features__title mx-auto">{{ .Params.title }}</h2>
