--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "customer-stories") }}
+{{ with (.Site.GetPage "/headless/main/customer-stories") }}
 <section class="customer-stories">
   <div class="container">
     <div class="customer-stories__header">
