--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customers.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customers.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "customers")}}
+{{ with (.Site.GetPage "/headless/main/customers")}}
 <section class="customers">
   {{ $context := slice }}
   {{ range .Params.customers }}
