--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "docker-deploy") }}
+{{ with (.Site.GetPage "/headless/main/docker-deploy") }}
 <section class="docker-deploy">
   <div class="container">
     <div class="docker-deploy__content row">
