--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-benefits.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/enterprise-benefits.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "enterprise-benefits") }}
+{{ with (.Site.GetPage "enterprise-solutions/enterprise-benefits") }}
 <section class="enterprise-benefits">
   <div class="enterprise-benefits__wrapper container">
     <h2 class="enterprise-benefits__title">{{ .Params.title }}</h2>
