--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/feature-overview.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/feature-overview.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "feature-overview") }}
+{{ with (.Site.GetPage "/qdrant-vector-database/feature-overview") }}
 <section class="feature-overview">
   <div class="feature-overview__content container">
     <div class="row">
