--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-contacted.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-contacted.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "get-contacted") }}
+{{ with (.Site.GetPage "/headless/get-contacted") }}
 <section class="get-contacted">
   <div class="get-contacted__wrapper container">
     <div class="get-contacted__content col-12">
