--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started-small.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started-small.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "get-started-small") }}
+{{ with (.Site.GetPage "/headless/get-started-small") }}
 <section class="get-started-small">
   <div class="get-started-small__wrapper container">
     <div class="get-started-small__content col-12">
