--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "get-started") }}
+{{ with (.Site.GetPage "/headless/get-started") }}
 <section class="get-started">
   <div class="container">
     <div class="get-started__content">
