--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "hero") }}
+{{ with (.Site.GetPage "/headless/main/hero") }}
 <section class="hero">
   <div class="container">
     <div class="row">
