--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/integrations.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/integrations.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "integrations") }}
+{{ with (.Site.GetPage "/headless/main/integrations") }}
 <section class="integrations">
   <div class="container">
     <h2 class="integrations__title mx-auto">{{ .Params.title }}</h2>
