--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/testimonial.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/testimonial.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "testimonial") }}
+{{ with (.Site.GetPage "/enterprise-solutions/testimonial") }}
 <section class="testimonial">
   <div class="testimonial__wrapper container">
     <div class="testimonial__cards row">
