--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "footer") }}
+{{ with (.Site.GetPage "/headless/footer") }}
 <footer class="footer">
   <div class="container">
     <div class="footer__top">
