--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/menu.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/menu.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "menu")}}
+{{ with (.Site.GetPage "/headless/menu")}}
 <div class="main-menu">
   <a href="/">
     {{ partial "logo.html" . }}
@@ -13,7 +13,7 @@
   </ul>
   <div class="main-menu__buttons">
     <a href="{{ .Params.logIn.url }}" class="menu-link mx-3">{{ .Params.logIn.text }}</a>
-    <button class="button button_contained button_sm">{{ .Params.tryFree }}</button>
+    <a href="{{ .Params.startFree.url }}" class="button button_contained button_sm">{{ .Params.startFree.text }}</a>
   </div>
 </div>
 {{ end }}
