--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-hero.html
@@ -1,26 +1,30 @@
 {{ with (.Site.GetPage "/qdrant-vector-database/qdrant-vector-database-hero") }}
-<section class="qdrant-vector-database-hero">
-  <div class="qdrant-vector-database-hero__wrapper container">
-    <div class="row">
-      <div class="col-12">
-        <h3 class="qdrant-vector-database-hero__title">{{ .Params.title }}</h3>
-        <div class="qdrant-vector-database-hero__description">{{ .Params.description }}</div>
-        <div class="qdrant-vector-database-hero__buttons">
-          <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg">
-            {{ .Params.startFree.text }}
-          </a>
-          <a href="{{ .Params.contactUs.url }}" class="button button_outlined button_lg">
-            {{ .Params.contactUs.text }}
-          </a>
+  <section class="qdrant-vector-database-hero">
+    <div class="qdrant-vector-database-hero__wrapper container">
+      <div class="row">
+        <div class="col-12">
+          <h3 class="qdrant-vector-database-hero__title">{{ .Params.title }}</h3>
+          <div class="qdrant-vector-database-hero__description">{{ .Params.description }}</div>
+          <div class="qdrant-vector-database-hero__buttons">
+            <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg">
+              {{ .Params.startFree.text }}
+            </a>
+            <a href="{{ .Params.contactUs.url }}" class="button button_outlined button_lg">
+              {{ .Params.contactUs.text }}
+            </a>
+          </div>
+          <img
+            class="qdrant-vector-database-hero__preview"
+            src="{{ .Params.image.src }}"
+            alt="{{ .Params.image.alt }}"
+          />
+          <img
+            class="qdrant-vector-database-hero__preview-mobile"
+            src="{{ .Params.image.srcMobile }}"
+            alt="{{ .Params.image.alt }}"
+          />
         </div>
-        <img class="qdrant-vector-database-hero__preview" src="{{ .Params.image.src }}" alt="{{ .Params.image.alt }}" />
-        <img
-          class="qdrant-vector-database-hero__preview-mobile"
-          src="{{ .Params.image.srcMobile }}"
-          alt="{{ .Params.image.alt }}"
-        />
       </div>
     </div>
-  </div>
-</section>
+  </section>
 {{ end }}
