add qdrant cloud page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -29,6 +29,10 @@
 @import 'partials/get-contacted';
 @import 'partials/enterprise-benefits';
 @import 'partials/top-and-bottom-overlay';
+@import 'partials/qdrant-cloud-hero';
+@import 'partials/qdrant-cloud-bento-cards';
+@import 'partials/marketplaces';
+@import 'partials/qdrant-features-link';
 
 .main-header {
   background: $neutral-10;
