--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -6,41 +6,25 @@
   <body>
     <main>
       <header class="main-header">
-        {{ with (.Site.GetPage "section" "top-banner") }}{{ partial "top-banner" . }}{{ end }}
-        {{ with (.Site.GetPage
-          "menu")
-        }}
-          {{ partial "menu" . }}
-        {{ end }}
-        {{ with (.Site.GetPage "menu-mobile") }}{{ partial "menu-mobile" . }}{{ end }}
-        {{ with (.Site.GetPage "hero") }}{{ partial "hero" . }}{{ end }}
-        {{ with (.Site.GetPage
-          "customers")
-        }}
-          {{ partial "customers" . }}
-        {{ end }}
+        {{ partial "top-banner" . }}
+
+        {{ partial "menu" . }}
+        {{ partial "menu-mobile" . }}
+        {{ partial "hero" . }}
+        {{ partial "customers" . }}
       </header>
-      {{ with (.Site.GetPage "core-features") }}{{ partial "core-features" . }}{{ end }}
-      {{ with (.Site.GetPage
-        "customer-stories")
-      }}
-        {{ partial "customer-stories" . }}
+      {{ partial "core-features" . }}
+      {{ partial "customer-stories" . }}
+      {{ partial "integrations" . }}
+      {{ partial "docker-deploy" . }}
+
+      {{ with (.Site.GetPage "/headless/main/vectors") }}
+        {{ partial "vectors" . }}
       {{ end }}
-      {{ with (.Site.GetPage "integrations") }}{{ partial "integrations" . }}{{ end }}
-      {{ with (.Site.GetPage "docker-deploy") }}
-        {{ partial "docker-deploy" . }}
-      {{ end }}
-      {{ with (.Site.GetPage "vectors") }}{{ partial "vectors" . }}{{ end }}
-      {{ with (.Site.GetPage
-        "get-started")
-      }}
-        {{ partial "get-started" . }}
-      {{ end }}
-      {{ with (.Site.GetPage "footer") }}
-        {{ partial "footer"
-          .
-        }}
-      {{ end }}
+
+      {{ partial "get-started" . }}
+
+      {{ partial "footer" . }}
     </main>
     {{ $pageSearchScrollJs := resources.Get "/js/search/scroll.js" | js.Build | minify | resources.Fingerprint "sha512" }}
     <script src="{{ $pageSearchScrollJs.RelPermalink }}"></script>
