--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
@@ -1,23 +1,25 @@
-<section class="additional-resources">
-  <div class="additional-resources__wrapper container">
-    <h2 class="additional-resources__title">{{ .Params.title }}</h2>
-    <div class="additional-resources__cards row">
-      {{ range .Params.resourceCards }}
-        <div class="additional-resources__card col-12 col-xl-3">
-          <div class="additional-resources__card-info">
-            <div>
-              {{ .icon | safeHTML }}
-              <h6 class="additional-resources__card-title">{{ .title }}</h6>
-              <p class="additional-resources__card-content">{{ .content }}</p>
+{{ with (.Site.GetPage "/qdrant-vector-database/additional-resources") }}
+  <section class="additional-resources">
+    <div class="additional-resources__wrapper container">
+      <h2 class="additional-resources__title">{{ .Params.title }}</h2>
+      <div class="additional-resources__cards row">
+        {{ range .Params.resourceCards }}
+          <div class="additional-resources__card col-12 col-xl-3">
+            <div class="additional-resources__card-info">
+              <div>
+                {{ .icon | safeHTML }}
+                <h6 class="additional-resources__card-title">{{ .title }}</h6>
+                <p class="additional-resources__card-content">{{ .content }}</p>
+              </div>
+              <a class="additional-resources__card-link" href="{{ .link.url }}">
+                <span>{{ .link.text }}</span>
+                <span>{{ partial "svg" "arrow-right-white.svg" }}</span>
+              </a>
             </div>
-            <a class="additional-resources__card-link" href="{{ .link.url }}">
-              <span>{{ .link.text }}</span>
-              <span>{{ partial "svg" "arrow-right-white.svg" }}</span>
-            </a>
           </div>
-        </div>
-      {{ end }}
+        {{ end }}
+      </div>
     </div>
-  </div>
-  {{ partial "top-and-bottom-overlay" (dict "context" . "class" "additional-resources") }}
-</section>
+    {{ partial "top-and-bottom-overlay" (dict "context" . "class" "additional-resources") }}
+  </section>
+{{ end }}
