--- a/qdrant-landing/themes/qdrant-2024/layouts/use-cases/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/use-cases/baseof.html
@@ -3,18 +3,15 @@
 
 <main>
   <header class="main-header">
-    {{ with (.Site.GetPage "section" "top-banner") }}{{ partial "top-banner" . }}{{ end }}
-    {{ with (.Site.GetPage
-      "menu")
-    }}
-      {{ partial "menu" . }}
-    {{ end }}
-    {{ with (.Site.GetPage "menu-mobile") }}{{ partial "menu-mobile" . }}{{ end }}
+    {{ partial "top-banner" . }}
+    {{ partial "menu" . }}
+    {{ partial "menu-mobile" . }}
   </header>
 </main>
 
 {{ with (.Site.GetPage "vectors-use-case") }}
-  {{ .Scratch.Set "cssClass" "vectors-use-case" }}{{ partial "vectors" . }}
+  {{ .Scratch.Set "cssClass" "/use-case/vectors-use-case" }}{{ partial "vectors" . }}
 {{ end }}
-{{ with (.Site.GetPage "get-started") }}{{ partial "get-started" . }}{{ end }}
-{{ with (.Site.GetPage "footer") }}{{ partial "footer" . }}{{ end }}
+
+{{ partial "get-started" . }}
+{{ partial "footer" . }}
