--- a/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
@@ -14,4 +14,5 @@
 {{ with (.Site.GetPage "enterprise-benefits") }}{{ partial "enterprise-benefits" . }}{{ end }}
 {{ with (.Site.GetPage "get-contacted") }}{{ partial "get-contacted" . }}{{ end }}
 {{ with (.Site.GetPage "get-started") }}{{ partial "get-started" . }}{{ end }}
+{{ with (.Site.GetPage "customer-list") }}{{ partial "customer-list" . }}{{ end }}
 {{ with (.Site.GetPage "footer") }}{{ partial "footer" . }}{{ end }}
