--- a/qdrant-landing/themes/qdrant-2024/assets/css/mixins/_marquee.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/mixins/_marquee.scss
@@ -8,6 +8,7 @@
   $total-marquee-items: 6,
   $visible-marquee-items: 6,
   $item-padding: 20px,
+  $background-color: #090e1a,
   $pauseOnHover: false,
   $speed: 25s
 ) {
@@ -24,27 +25,23 @@
     &:before,
     &:after {
       content: '';
-      display: none;
       position: absolute;
       top: 0;
       bottom: 0;
-      width: rem(100);
+      width: rem(80);
       z-index: 1;
 
-      @include bs.media-breakpoint-up(md) {
-        display: block;
-      }
       @include bs.media-breakpoint-up(lg) {
         width: rem(165);
       }
     }
     &:before {
       left: 0;
-      background: linear-gradient(90deg, #090e1a 0.5%, #090e1a 38.79%, rgba(9, 14, 26, 0) 100%);
+      background: linear-gradient(90deg, $background-color 0.5%, $background-color 38.79%, rgba(9, 14, 26, 0) 100%);
     }
     &:after {
       right: 0;
-      background: linear-gradient(270deg, #090e1a 38.79%, rgba(9, 14, 26, 0) 100%);
+      background: linear-gradient(270deg, $background-color 38.79%, rgba(9, 14, 26, 0) 100%);
     }
   }
 
