--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/marketplaces.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/marketplaces.html
@@ -1,16 +1,18 @@
-<section class="marketplaces">
-  <div class="marketplaces__wrapper container">
-    <h2 class="marketplaces__title">{{ .Params.title }}</h2>
-    <div class="marketplaces__cards row">
-      {{ range $index, $element := .Params.items }}
-        <div class="col-12 col-xl-4">
-          <div class="card marketplaces__card">
-            <img src="{{ .image.src }}" alt="{{ .image.alt }}" />
-            <h5>{{ .title }}</h5>
-            <a class="link link_md" href="{{ .link.url }}">{{ .link.text }}</a>
+{{ with (.Site.GetPage "/headless/marketplaces") }}
+  <section class="marketplaces">
+    <div class="marketplaces__wrapper container">
+      <h2 class="marketplaces__title">{{ .Params.title }}</h2>
+      <div class="marketplaces__cards row">
+        {{ range $index, $element := .Params.items }}
+          <div class="col-12 col-xl-4">
+            <div class="card marketplaces__card">
+              <img src="{{ .image.src }}" alt="{{ .image.alt }}" />
+              <h5>{{ .title }}</h5>
+              <a class="link link_md" href="{{ .link.url }}">{{ .link.text }}</a>
+            </div>
           </div>
-        </div>
-      {{ end }}
+        {{ end }}
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+{{ end }}
