--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-cloud-bento-cards.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-cloud-bento-cards.html
@@ -1,18 +1,20 @@
-<section class="qdrant-cloud-bento-cards">
-  <div class="qdrant-cloud-bento-cards__wrapper container">
-    <div class="qdrant-cloud-bento-cards__cards row">
-      {{ range $index, $element := .Params.items }}
-        <div class="col-12">
-          <div class="card qdrant-cloud-bento-cards__card">
-            <h5 class="qdrant-cloud-bento-cards__card-title">{{ .title }}</h5>
-            <p class="qdrant-cloud-bento-cards__card-description">{{ .description | safeHTML }}</p>
-            {{ if .link }}
-              <a class="link link_md align-self-start" href="{{ .link.url }}">{{ .link.text }}</a>
-            {{ end }}
-            <img src="{{ .image.src }}" alt="{{ .image.alt }}" />
+{{ with (.Site.GetPage "/qdrant-cloud/qdrant-cloud-bento-cards") }}
+  <section class="qdrant-cloud-bento-cards">
+    <div class="qdrant-cloud-bento-cards__wrapper container">
+      <div class="qdrant-cloud-bento-cards__cards row">
+        {{ range $index, $element := .Params.items }}
+          <div class="col-12">
+            <div class="card qdrant-cloud-bento-cards__card">
+              <h5 class="qdrant-cloud-bento-cards__card-title">{{ .title }}</h5>
+              <p class="qdrant-cloud-bento-cards__card-description">{{ .description | safeHTML }}</p>
+              {{ if .link }}
+                <a class="link link_md align-self-start" href="{{ .link.url }}">{{ .link.text }}</a>
+              {{ end }}
+              <img src="{{ .image.src }}" alt="{{ .image.alt }}" />
+            </div>
           </div>
-        </div>
-      {{ end }}
+        {{ end }}
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+{{ end }}
