--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-features-link.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-features-link.html
@@ -1,6 +1,8 @@
-<section class="qdrant-features-link">
-  <div class="qdrant-features-link__wrapper container">
-    <h6 class="qdrant-features-link__content">{{ .Params.content }}</h6>
-    <a class="qdrant-features-link__link link link_xl" href="{{ .Params.link.url }}">{{ .Params.link.text }}</a>
-  </div>
-</section>
+{{ with (.Site.GetPage "/qdrant-cloud/qdrant-features-link") }}
+  <section class="qdrant-features-link">
+    <div class="qdrant-features-link__wrapper container">
+      <h6 class="qdrant-features-link__content">{{ .Params.content }}</h6>
+      <a class="qdrant-features-link__link link link_xl" href="{{ .Params.link.url }}">{{ .Params.link.text }}</a>
+    </div>
+  </section>
+{{ end }}
