--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-cloud/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-cloud/baseof.html
@@ -3,16 +3,17 @@
 
 <main>
   <header class="main-header">
-    {{ with (.Site.GetPage "section" "top-banner") }}{{ partial "top-banner" . }}{{ end }}
-    {{ with (.Site.GetPage "menu") }}{{ partial "menu" . }}{{ end }}
-    {{ with (.Site.GetPage "menu-mobile") }}{{ partial "menu-mobile" . }}{{ end }}
-    {{ with (.Site.GetPage "qdrant-cloud-hero") }}{{ partial "qdrant-cloud-hero" . }}{{ end }}
+    {{ partial "top-banner" . }}
+    {{ partial "menu" . }}
+    {{ partial "menu-mobile" . }}
+    {{ partial "qdrant-cloud-hero" . }}
   </header>
 </main>
 
-{{ with (.Site.GetPage "qdrant-cloud-bento-cards") }}{{ partial "qdrant-cloud-bento-cards" . }}{{ end }}
-{{ with (.Site.GetPage "qdrant-features-link") }}{{ partial "qdrant-features-link" . }}{{ end }}
-{{ with (.Site.GetPage "marketplaces") }}{{ partial "marketplaces" . }}{{ end }}
-{{ with (.Site.GetPage "additional-resources") }}{{ partial "additional-resources" . }}{{ end }}
-{{ with (.Site.GetPage "get-started") }}{{ partial "get-started" . }}{{ end }}
-{{ with (.Site.GetPage "footer") }}{{ partial "footer" . }}{{ end }}
+{{ partial "get-started-small-database" . }}
+{{ partial "qdrant-cloud-bento-cards" . }}
+{{ partial "qdrant-features-link" . }}
+{{ partial "marketplaces" . }}
+{{ partial "additional-resources" . }}
+{{ partial "get-started" . }}
+{{ partial "footer" . }}
