--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started.scss
@@ -47,6 +47,7 @@
     color: $neutral-90;
     margin-top: $spacer * 1.5;
     margin-bottom: $spacer * 1.5;
+    z-index: 1;
   }
 
   &__planet-icon {
