--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-features-link.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-features-link.scss
@@ -10,6 +10,27 @@
   }
 
   @include media-breakpoint-up(xl) {
+    position: relative;
+
+    &:before,
+    &:after {
+      content: ('');
+      display: block;
+      position: absolute;
+      top: rem(25);
+      height: rem(1);
+      width: calc((100% - 820px) / 2);
+      background-color: $neutral-90;
+    }
+
+    &:before {
+      left: 0;
+    }
+
+    &:after {
+      right: 0;
+    }
+
     &__wrapper {
       max-width: rem(1134);
     }
