--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/demos.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/demos.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "/headless/demos/demos-tutorials") }}
+{{ with (.Site.GetPage "/headless/demos") }}
   <section class="demos">
     <div class="container">
       <div class="demos__header">
