--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -30,6 +30,7 @@
 @import 'partials/enterprise-benefits';
 @import 'partials/top-and-bottom-overlay';
 @import 'partials/demos';
+@import 'partials/tutorials';
 
 .main-header {
   background: $neutral-10;
