add hybrid cloud page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -29,6 +29,11 @@
 @import 'partials/get-contacted';
 @import 'partials/enterprise-benefits';
 @import 'partials/top-and-bottom-overlay';
+@import 'partials/hybrid-cloud-hero';
+@import 'partials/hybrid-cloud-kubernetes-clusters';
+@import 'partials/hybrid-cloud-cases';
+@import 'partials/hybrid-cloud-how-it-works';
+@import 'partials/hybrid-cloud-features';
 
 .main-header {
   background: $neutral-10;
