--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-hero.scss
@@ -1,7 +1,8 @@
 @use '../helpers/functions' as *;
 
-.enterprise-solutions-hero {
+.hybrid-cloud-hero {
   padding-top: $spacer * 2.5;
+  padding-bottom: $spacer * 4;
 
   &__wrapper {
     text-align: center;
@@ -12,6 +13,34 @@
     line-height: $spacer * 3;
     margin-bottom: $spacer * 1.5;
     color: $neutral-98;
+  }
+
+  &__features {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: $spacer;
+    margin-bottom: $spacer * 1.5;
+
+    & > div {
+      gap: $spacer * 0.5;
+      padding: rem(4) $spacer;
+      border-radius: rem(100);
+      background-color: $neutral-20;
+
+      img {
+        height: $spacer;
+        width: $spacer;
+      }
+
+      p {
+        font-size: rem(14);
+        line-height: rem(21);
+        color: $neutral-90;
+        margin-bottom: 0;
+      }
+    }
   }
 
   &__description {
@@ -33,22 +62,26 @@
     }
   }
 
-  &__preview-mobile {
-    width: 100%;
-    padding: 0 rem(12);
-  }
-
   &__preview {
-    display: none;
+    margin-top: -$spacer;
+    padding: 0;
+
+    img {
+      width: 100%;
+    }
   }
 
   @include media-breakpoint-up(xl) {
-    padding-left: 0;
-    padding-right: 0;
     padding-top: $spacer * 5;
+    padding-bottom: $spacer * 7.5;
 
     &__wrapper {
       max-width: rem(1134);
+      text-align: left;
+    }
+
+    &__content {
+      width: rem(524);
     }
 
     &__title {
@@ -56,29 +89,30 @@
       line-height: rem(76);
     }
 
+    &__features {
+      flex-direction: row;
+      justify-content: flex-start;
+      flex-wrap: wrap;
+    }
+
     &__description {
-      max-width: rem(730);
       font-size: rem(20);
       line-height: rem(30);
-      margin: 0 auto $spacer * 2 auto;
     }
 
     &__buttons {
       flex-direction: row;
+      justify-content: flex-start;
 
       .button {
         min-width: auto;
       }
     }
 
-    &__preview-mobile {
-      display: none;
-    }
-
     &__preview {
-      display: block;
-      width: 100%;
-      padding: 0;
+      width: rem(574);
+      margin-top: -$spacer * 5;
+      padding: 0 rem(12);
     }
   }
 }
