--- a/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/enterprise-solutions/baseof.html
@@ -13,6 +13,6 @@
 {{ partial "enterprise-solutions-use-cases" . }}
 {{ partial "testimonial" . }}
 {{ partial "enterprise-benefits" . }}
-{{ partial "get-contacted" . }}
+{{ partial "get-contacted-with-question" . }}
 {{ partial "get-started" . }}
 {{ partial "footer" . }}
