--- a/qdrant-landing/themes/qdrant-2024/layouts/hybrid-cloud/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/hybrid-cloud/baseof.html
@@ -14,4 +14,5 @@
 {{ partial "hybrid-cloud-cases" . }}
 {{ partial "hybrid-cloud-how-it-works" . }}
 {{ partial "hybrid-cloud-features" . }}
+{{ partial "get-started" . }}
 {{ partial "footer" . }}
