--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-hero.html
@@ -3,8 +3,8 @@
     <div class="hybrid-cloud-hero__wrapper container">
       <div class="row">
         <div class="col-12">
-          <div class="row justify-content-lg-between">
-            <div class="hybrid-cloud-hero__content col-12 col-lg-6">
+          <div class="row justify-content-xl-between">
+            <div class="hybrid-cloud-hero__content col-12 col-xl-6">
               <h1 class="hybrid-cloud-hero__title">{{ .Params.title }}</h1>
               <div class="hybrid-cloud-hero__features">
                 {{ range .Params.features }}
@@ -25,7 +25,7 @@
               </div>
             </div>
 
-            <div class="hybrid-cloud-hero__preview col-12 col-lg-6">
+            <div class="hybrid-cloud-hero__preview col-12 col-xl-6">
               <img src="{{ .Params.image.src }}" alt="{{ .Params.image.alt }}" />
             </div>
           </div>
