--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_enterprise-benefits.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_enterprise-benefits.scss
@@ -10,6 +10,7 @@
     margin-bottom: $spacer * 2.5;
     font-size: $spacer * 2;
     line-height: rem(38);
+    color: $neutral-20;
   }
 
   &__cards {
@@ -33,12 +34,14 @@
       font-size: $spacer * 1.5;
       line-height: rem(34);
       margin-bottom: $spacer;
+      color: $neutral-20;
     }
 
     &-description {
       font-size: rem(18);
       line-height: rem(27);
       margin-bottom: 0;
+      color: $neutral-30;
     }
   }
 
