--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-kubernetes-clusters.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-kubernetes-clusters.html
@@ -3,13 +3,13 @@
     <div class="hybrid-cloud-kubernetes-clusters__wrapper container">
       <div class="row">
         <div class="col-12">
-          <div class="row justify-content-lg-between align-items-lg-center">
-            <div class="hybrid-cloud-kubernetes-clusters__content col-12 col-lg-6">
+          <div class="row justify-content-xl-between align-items-xl-center">
+            <div class="hybrid-cloud-kubernetes-clusters__content col-12 col-xl-6">
               <h1 class="hybrid-cloud-kubernetes-clusters__title">{{ .Params.title }}</h1>
               <p class="hybrid-cloud-kubernetes-clusters__description">{{ .Params.descriptionFirstPart }}</p>
               <p class="hybrid-cloud-kubernetes-clusters__description">{{ .Params.descriptionSecondPart }}</p>
             </div>
-            <div class="hybrid-cloud-kubernetes-clusters__preview col-12 col-lg-6">
+            <div class="hybrid-cloud-kubernetes-clusters__preview col-12 col-xl-6">
               <img src="{{ .Params.image.src }}" alt="{{ .Params.image.alt }}" />
             </div>
           </div>
