--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_marketplaces.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_marketplaces.scss
@@ -9,6 +9,7 @@
     margin-bottom: $spacer * 2.5;
     font-size: rem(40);
     line-height: $spacer * 3;
+    color: $neutral-20;
     text-align: center;
   }
 
@@ -31,6 +32,7 @@
       margin-bottom: $spacer * 1.5;
       font-size: rem(20);
       line-height: rem(30);
+      color: $neutral-20;
     }
   }
 
