--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-cloud-bento-cards.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-cloud-bento-cards.scss
@@ -22,6 +22,7 @@
       font-size: $spacer * 1.5;
       line-height: rem(34);
       margin-bottom: rem(12);
+      color: $neutral-20;
     }
 
     &-description {
