--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started-small.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started-small.html
@@ -1,7 +1,7 @@
 <section class="{{ .class }}">
   <div class="{{ .class }}__wrapper container">
     <div class="{{ .class }}__content col-12">
-      <div class="row justify-content-xl-between align-items-lg-center">
+      <div class="row justify-content-xl-between align-items-xl-center">
         <div class="{{ .class }}__text col-12 col-xl-7">
           <h3 class="{{ .class }}__title">{{ .context.Params.title }}</h3>
           <a href="{{ .context.Params.startFree.url }}" class="button button_contained">
