--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-cloud/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-cloud/baseof.html
@@ -12,7 +12,7 @@
 
 {{ partial "get-started-small-database" . }}
 {{ partial "qdrant-cloud-bento-cards" . }}
-{{ partial "qdrant-features-link" . }}
+{{ partial "qdrant-cloud-features-link" . }}
 {{ partial "marketplaces" . }}
 {{ partial "additional-resources" . }}
 {{ partial "get-started" . }}
