--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started-small-database.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started-small-database.scss
@@ -1,12 +1,11 @@
-@use '../helpers/functions' as *;
 @use '../mixins/get-started-small' as get-started-small;
 
 .get-started-small-database {
   @include get-started-small.base(
-    80px,
-    24px,
-    80px,
-    40px,
+    $spacer * 5,
+    $spacer * 1.5,
+    $spacer * 5,
+    $spacer * 2.5,
     url('/img/stars-pattern.png') $neutral-10,
     url('/img/stars-pattern.png') $neutral-10
   );
