--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started-small-rocket.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started-small-rocket.scss
@@ -1,13 +1,12 @@
-@use '../helpers/functions' as *;
 @use '../mixins/get-started-small' as get-started-small;
 
 .get-started-small-rocket {
   @include get-started-small.base(
-    80px,
-    24px,
-    120px,
-    40px,
-    linear-gradient(#161e33, #0e1424),
-    linear-gradient(to left, #161e33, #0e1424)
+    $spacer * 5,
+    $spacer * 1.5,
+    $spacer * 7.5,
+    $spacer * 2.5,
+    linear-gradient($neutral-20, #0e1424),
+    linear-gradient(to left, $neutral-20, #0e1424)
   );
 }
