add demos page (#768)
* add demos page

* add interactive tutorials section

---------

Co-authored-by: Nik Shemel <nikita_shershnev@hotmail.com>

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -29,6 +29,8 @@
 @import 'partials/get-contacted';
 @import 'partials/enterprise-benefits';
 @import 'partials/top-and-bottom-overlay';
+@import 'partials/demos';
+@import 'partials/tutorials';
 
 .main-header {
   background: $neutral-10;
