--- a/qdrant-landing/themes/qdrant-2024/layouts/demos-and-tutorials/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/demos-and-tutorials/baseof.html
@@ -9,9 +9,7 @@
   </header>
 </main>
 
-{{ with (.Site.GetPage "vectors-use-case") }}
-  {{ .Scratch.Set "cssClass" "vectors-use-case" }}{{ partial "vectors" . }}
-{{ end }}
-
+{{ partial "demos" . }}
+{{ partial "tutorials" . }}
 {{ partial "get-started" . }}
 {{ partial "footer" . }}
