--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -29,6 +29,12 @@
 @import 'partials/get-contacted';
 @import 'partials/enterprise-benefits';
 @import 'partials/top-and-bottom-overlay';
+@import 'partials/qdrant-pricing-hero';
+@import 'partials/qdrant-pricing-calculator';
+@import 'partials/qdrant-pricing-docker';
+@import 'partials/qdrant-pricing-doors-a';
+@import 'partials/qdrant-pricing-doors-b';
+@import 'partials/pricing-door';
 
 .main-header {
   background: $neutral-10;
