--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -31,6 +31,9 @@
 @import 'partials/top-and-bottom-overlay';
 @import 'partials/demos';
 @import 'partials/tutorials';
+@import 'partials/carousel';
+@import 'partials/leadership';
+@import 'partials/open-roles';
 
 .main-header {
   background: $neutral-10;
